# flask_blog_with_users

./: .gitignore  README.md  email_sender.py  forms.py  main.py  pyproject.toml  requirements.txt  versel.json
static/css/: styles.css
templates/: about.html  contact.html  footer.html  header.html  index.html  login.html  post.html
