[project]
name = "flask-blog-with-users"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleach==6.2.0",
    "blinker==1.9.0",
    "bootstrap-flask==2.5.0",
    "click==8.3.0",
    "dotenv==0.9.9",
    "flask==3.1.2",
    "flask-ckeditor==1.0.0",
    "flask-gravatar==0.5.0",
    "flask-login==0.6.3",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.2",
    "greenlet==3.2.4",
    "gunicorn==23.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "packaging==25.0",
    "psycopg2-binary==2.9.11",
    "python-dotenv==1.1.1",
    "sqlalchemy==2.0.43",
    "typing-extensions==4.15.0",
    "webencodings==0.5.1",
    "werkzeug==3.1.3",
    "wtforms==3.2.1",
]
